welcome.lessons.welcome.conditions.Conditions.scala.code
if (FaceMur){
	avance();
}else{
	recule();
}
